# Star-Dust

./: .gitignore  CMakeLists.txt
cmake/: sources.cmake
src/: main.c  main.cpp
src/app/: Application.cpp  Application.hpp  application.c  application.cpp  application.h  application.hpp
src/app/camera/: camera.c  camera.cpp  camera.hpp
src/cmake/: compile_shaders.cmake  sources.cmake
src/vulkan_api/buffers/: BufferHolder.cpp  BufferHolder.hpp  buffer_holder.c  buffer_holder.cpp  buffer_holder.h  buffer_holder.hpp
src/vulkan_api/command_pool/: CommandBufferPool.cpp  CommandBufferPool.hpp  command_buffer_pool.c  command_buffer_pool.cpp  command_buffer_pool.h  command_buffer_pool.hpp
src/vulkan_api/context/: Context.cpp  Context.hpp  context.c  context.cpp  context.hpp
src/vulkan_api/pipeline/: GraphicsPipeline.cpp  GraphicsPipeline.hpp  graphics_pipeline.c  graphics_pipeline.cpp  graphics_pipeline.h  graphics_pipeline.hpp
src/vulkan_api/pipeline/descriptors/: DescriptorPool.cpp  DescriptorPool.hpp  descriptor_pool.c  descriptor_pool.cpp  descriptor_pool.h  descriptor_pool.hpp
src/vulkan_api/pipeline/stages/shader/: Shader.cpp  Shader.hpp  VertexInputState.cpp  VertexInputState.hpp  shader.c  shader.cpp  shader.h
src/vulkan_api/pipeline/stages/uniform/: DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  descriptor_set_layout.c  descriptor_set_layout.cpp  descriptor_set_layout.hpp
src/vulkan_api/pipeline/stages/vertex/: vertex_input_state.c  vertex_input_state.cpp  vertex_input_state.hpp
src/vulkan_api/presentation/: MainView.cpp  MainView.hpp  main_view.c  main_view.cpp  main_view.h  main_view.hpp
src/vulkan_api/render/: Render.cpp  Render.hpp  Renderer.cpp  render.c  render.cpp  render.h  render.hpp
src/vulkan_api/sync/: SyncManager.cpp  SyncManager.hpp  sync_manager.c  sync_manager.cpp  sync_manager.h  sync_manager.hpp
src/vulkan_api/texture/: Texture2D.cpp  Texture2D.hpp  texture2D.c  texture2D.cpp  texture2D.h
src/vulkan_api/utils/: Defines.hpp  Tools.cpp  Tools.hpp  tools.c  tools.cpp  tools.hpp
